# x11wmgr

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  error.rs  lib.rs  main.rs  messages.rs  windowmanager.rs
tests/: serde_tests.rs
