[package]
name = "x11wmgr"
version = "0.1.0"
authors = ["John Mark de Mello <demellj@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11rb = { version = "*", features = ["all-extensions"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
warp = { version = "0.3", optional = true }
tokio = { version = "1", optional = true, features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
] }

[features]
default = []
websrvc = ["warp", "tokio"]

[[bin]]
name = "x11wmgr"
path = "bin/x11wmgr.rs"

[[bin]]
name = "websrvc"
path = "bin/websrvc.rs"
required-features = ["websrvc"]
